--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="operaciones.js" type="module"></script>
+    <!-- <script src="/JS/array.js" type="module"></script> -->
+    <script src="/JS/arrayObject.js" type="module"></script>
 </body>
 </html>
