--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/JS/exercises.js" type="module"></script>
-    <!-- <script src="/JS/array.js" type="module"></script> -->
-    <!-- <script src="/JS/arrayObject.js" type="module"></script> -->
+    <!-- <script src="/JS/exercises.js" type="module"></script> -->
+    <script src="/JS/Arrays/array.js" type="module"></script>
+   
 </body>
 </html>
