--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <!-- <script src="/JS/exercises.js" type="module"></script> -->
+   
+    <!-- <script src="/JS/JS Bases/variables.js" type="module"></script> -->
+    <!-- <script src="/JS/JS Bases/operators.js" type="module"></script> -->
+    <!-- <script src="/JS/JS Bases/operaciones.js" type="module"></script>
+    <script src="/JS/JS Bases/promises.js" type="module"></script>
+    <script src="/JS/JS Bases/funcionesR.js" type="module"></script>
+    <script src="/JS/POO/poo.js" type="module"></script> -->
     <script src="/JS/Arrays/array.js" type="module"></script>
+ 
    
 </body>
 </html>
