Promises - Async-await

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <!-- <script src="/JS/exercises.js" type="module"></script> -->
-   
-    <!-- <script src="/JS/JS Bases/variables.js" type="module"></script> -->
-    <!-- <script src="/JS/JS Bases/operators.js" type="module"></script> -->
-    <!-- <script src="/JS/JS Bases/operaciones.js" type="module"></script>
-    <script src="/JS/JS Bases/promises.js" type="module"></script>
-    <script src="/JS/JS Bases/funcionesR.js" type="module"></script>
-    <script src="/JS/POO/poo.js" type="module"></script> -->
-    <script src="/JS/Arrays/array.js" type="module"></script>
- 
-   
+    <script src="/JS/exercises.js" type="module"></script>
+
+    <!-- <script src="/JS/Week 1 - JS Bases/variables.js" type="module"></script>
+    <script src="/JS/Week 1 - JS Bases/operaciones.js" type="module"></script>
+    <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
+    <script src="/JS/Week 1 - JS Bases/functions.js" type="module"></script>
+    <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script>
+    <script src="/JS/Week 1 - JS Bases/promises.js" type="module"></script>
+    <script src="/JS/Week 1 - JS Bases/async.js" type="module"></script> -->
+    <!-- <script src="/JS/POO/poo.js" type="module"></script>
+    <script src="/JS/Week 3 - Arrays/array.js" type="module"></script> -->
+
+
 </body>
+
 </html>
