--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <script src="/JS/exercises.js" type="module"></script>
 
     <!-- <script src="/JS/Week 1 - JS Bases/variables.js" type="module"></script>
-    <script src="/JS/Week 1 - JS Bases/operaciones.js" type="module"></script>
-    <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
-    <script src="/JS/Week 1 - JS Bases/functions.js" type="module"></script>
-    <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script>
-    <script src="/JS/Week 1 - JS Bases/promises.js" type="module"></script>
-    <script src="/JS/Week 1 - JS Bases/async.js" type="module"></script> -->
+        <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
+        <script src="/JS/Week 1 - JS Bases/functions.js" type="module"></script>
+        <script src="/JS/Week 1 - JS Bases/promises.js" type="module"></script>
+        <script src="/JS/Week 1 - JS Bases/async.js" type="module"></script> 
+        <script src="/JS/Week 1 - JS Bases/operaciones.js" type="module"></script>
+        <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script> -->
     <!-- <script src="/JS/POO/poo.js" type="module"></script>
     <script src="/JS/Week 3 - Arrays/array.js" type="module"></script> -->
 
