--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 
 <body>
-    <script src="/JS/exercises.js" type="module"></script>
+    <header>
+        <h1>TALENTO-TECH</h1>
+    </header>
+    <main>
+        <p>BootCamp - Intermedio </p>
+    </main>
+    <footer>
+        <p>Eli Rosero Castañeda</p>
+    </footer>
+    <!-- <script src="/JS/exercises.js" type="module"></script> -->
 
     <!-- <script src="/JS/Week 1 - JS Bases/variables.js" type="module"></script>
         <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
@@ -16,9 +25,12 @@
         <script src="/JS/Week 1 - JS Bases/promises.js" type="module"></script>
         <script src="/JS/Week 1 - JS Bases/async.js" type="module"></script> 
         <script src="/JS/Week 1 - JS Bases/operaciones.js" type="module"></script>
-        <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script> -->
-    <!-- <script src="/JS/POO/poo.js" type="module"></script>
-    <script src="/JS/Week 3 - Arrays/array.js" type="module"></script> -->
+        <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script> 
+    <script src="/JS/Week 2 - POO/poo.js" type="module"></script> 
+    <script src="/JS/Week 2 - POO/prototype.js" type="module"></script>
+    <script src="/JS/Week 2 - POO/inheritance.js" type="module"></script> -->
+    <script src="/JS/Week 2 - POO/inheritances2.js" type="module"></script>
+    <!-- <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>  -->
 
 
 </body>
