Week 2 - Encapsulation - inheritance - Polymorphism

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <footer>
         <p>Eli Rosero Castañeda</p>
     </footer>
-    <!-- <script src="/JS/exercises.js" type="module"></script> -->
+    <script src="/JS/exercises.js" type="module"></script>
 
     <!-- <script src="/JS/Week 1 - JS Bases/variables.js" type="module"></script>
         <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
@@ -28,8 +28,10 @@
         <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script> 
     <script src="/JS/Week 2 - POO/poo.js" type="module"></script> 
     <script src="/JS/Week 2 - POO/prototype.js" type="module"></script>
-    <script src="/JS/Week 2 - POO/inheritance.js" type="module"></script> -->
+    <script src="/JS/Week 2 - POO/inheritance.js" type="module"></script> 
     <script src="/JS/Week 2 - POO/inheritances2.js" type="module"></script>
+    <script src="/JS/Week 2 - POO/encapsulation.js" type="module"></script>
+    <script src="/JS/Week 2 - POO/polymorphism.js" type="module"></script>-->
     <!-- <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>  -->
 
 
