--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <footer>
         <p>Eli Rosero Castañeda</p>
     </footer>
-    <script src="/JS/exercises.js" type="module"></script>
+    <!-- <script src="/JS/exercises.js" type="module"></script> -->
 
     <!-- <script src="/JS/Week 1 - JS Bases/variables.js" type="module"></script>
         <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
@@ -32,7 +32,10 @@
     <script src="/JS/Week 2 - POO/inheritances2.js" type="module"></script>
     <script src="/JS/Week 2 - POO/encapsulation.js" type="module"></script>
     <script src="/JS/Week 2 - POO/polymorphism.js" type="module"></script>-->
-    <!-- <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>  -->
+    <!-- <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>  
+    <script src="/JS/Week 4 - Pilas - Colas/binarySearch.js" type="module"></script> 
+    <script src="/JS/Week 4 - Pilas - Colas/quickSort.js" type="module"></script> -->
+    <script src="/JS/Week 4 - Pilas - Colas/margeSort.js" type="module"></script> 
 
 
 </body>
