--- a/index.html
+++ b/index.html
@@ -35,31 +35,37 @@
     <footer>
         <p>Eli Rosero Castañeda</p>
     </footer>
-    <!-- Ejercicios de práctica - Semana 1  -->
-    <!-- <script src="./JS/Excercises/W1-JSbases/1-anonymousFunction.js" type="module"></script>
-    <script src="./JS/Excercises/W1-JSbases/2-forEach.js" type="module"></script>
-    <script src="./JS/Excercises/W1-JSbases/3-filter.js" type="module"></script>
-    <script src="./JS/Excercises/W1-JSbases/4-try-catch.js" type="module"></script>
-    <script src="./JS/Excercises/W1-JSbases/5-promiseAll.js" type="module"></script>
-    <script src="./JS/Excercises/W1-JSbases/6-programmingLogic.js" type="module"></script> -->
+ <!-- Ejercicios de práctica - Semana 1  -->
+         <!-- <script src="./JS/Excercises/W1-JSbases/1-anonymousFunction.js" type="module"></script>
+             <script src="./JS/Excercises/W1-JSbases/2-forEach.js" type="module"></script>
+             <script src="./JS/Excercises/W1-JSbases/3-filter.js" type="module"></script>
+            <script src="./JS/Excercises/W1-JSbases/4-try-catch.js" type="module"></script>
+            <script src="./JS/Excercises/W1-JSbases/5-promiseAll.js" type="module"></script>
+             <script src="./JS/Excercises/W1-JSbases/6-programmingLogic.js" type="module"></script> -->
 
-    <!-- Ejercicios de práctica - Semana 2  -->
-    <!-- <script src="./JS/Excercises/W2-POO/1-inheritance.js" type="module"></script>
-    <script src="./JS/Excercises/W2-POO/2-prototypicalInheritance.js" type="module"></script>
-    <script src="./JS/Excercises/W2-POO/3-encapsulation.js" type="module"></script>
-    <script src="./JS/Excercises/W2-POO/4-polymorphism.js" type="module"></script> -->
+<!-- Ejercicios de práctica - Semana 2  -->
+            <!-- <script src="./JS/Excercises/W2-POO/1-inheritance.js" type="module"></script>
+                <script src="./JS/Excercises/W2-POO/2-prototypicalInheritance.js" type="module"></script>
+                <script src="./JS/Excercises/W2-POO/3-encapsulation.js" type="module"></script>
+                <script src="./JS/Excercises/W2-POO/4-polymorphism.js" type="module"></script> -->
 
-    <!-- Ejercicios de práctica - Semana 3  -->
-    <!-- <script src="./JS/Excercises/W3-arraysMethods/1-forEachVSmap.js" type="module"></script>
-    <script src="./JS/Excercises/W3-arraysMethods/2-arrayFilter.js" type="module"></script>
-    <script src="./JS/Excercises/W3-arraysMethods/3-sort-ToSorted.js" type="module"></script>
-    <script src="./JS/Excercises/W3-arraysMethods/4-isArray-VS-instanceOf.js" type="module"></script> -->
+<!-- Ejercicios de práctica - Semana 3  -->
+         <!-- <script src="./JS/Excercises/W3-arraysMethods/1-forEachVSmap.js" type="module"></script>
+            <script src="./JS/Excercises/W3-arraysMethods/2-arrayFilter.js" type="module"></script>
+            <script src="./JS/Excercises/W3-arraysMethods/3-sort-ToSorted.js" type="module"></script>
+             <script src="./JS/Excercises/W3-arraysMethods/4-isArray-VS-instanceOf.js" type="module"></script> -->
 
-    <!-- Ejercicios de práctica - Semana 4  -->
-    <!-- <script src="./JS/Excercises/W4-dataStructure/1-margeSort.js" type="module"></script>
-    <script src="./JS/Excercises/W4-dataStructure/2-radixSort.js" type="module"></script>
-    <script src="" type="module"></script>
-    <script src="" type="module"></script> -->
+ <!-- Ejercicios de práctica - Semana 3.5  -->
+         <!-- <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/1-stacks"></script> -->
+
+ <!-- Ejercicios de práctica - Semana 4  -->
+        <!-- <script src="./JS/Excercises/W4-dataStructure/1-margeSort.js" type="module"></script>
+             <script src="./JS/Excercises/W4-dataStructure/2-radixSort.js" type="module"></script>
+            <script src="" type="module"></script>
+            <script src="" type="module"></script> -->
+
+
+<!-- Código y Teoría, Semana 1 -->
 
     <!-- <script src="/JS/Week 1 - JS Bases/variables.js" type="module"></script>
         <script src="/JS/Week 1 - JS Bases/operators.js" type="module"></script>
@@ -67,19 +73,31 @@
         <script src="/JS/Week 1 - JS Bases/promises.js" type="module"></script>
         <script src="/JS/Week 1 - JS Bases/async.js" type="module"></script> 
         <script src="/JS/Week 1 - JS Bases/operaciones.js" type="module"></script>
-        <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script> 
-    <script src="/JS/Week 2 - POO/poo.js" type="module"></script> 
-    <script src="/JS/Week 2 - POO/prototype.js" type="module"></script>
-    <script src="/JS/Week 2 - POO/inheritance.js" type="module"></script> 
-    <script src="/JS/Week 2 - POO/inheritances2.js" type="module"></script>
-    <script src="/JS/Week 2 - POO/encapsulation.js" type="module"></script>
-    <script src="/JS/Week 2 - POO/polymorphism.js" type="module"></script>-->
-    <!-- <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>  
-    <script src="/JS/Week 4 - Pilas - Colas/binarySearch.js" type="module"></script> 
-    <script src="/JS/Week 4 - Pilas - Colas/quickSort.js" type="module"></script> -->
-    <!-- <script src="/JS/Week 4 - Data Structure/margeSort.js" type="module"></script> -->
-    <!-- <script src="/JS/Week 4 - Data Structure/selectionSort.js" type="module"></script>
-    <script src="/JS/Week 4 - Data Structure/insertionSort.js" type="module"></script> -->
+        <script src="/JS/Week 1 - JS Bases/funcionesR.js" type="module"></script> -->
+
+ <!-- Código y Teoría, Semana 2 -->
+     <!-- <script src="/JS/Week 2 - POO/poo.js" type="module"></script> 
+        <script src="/JS/Week 2 - POO/prototype.js" type="module"></script>
+        <script src="/JS/Week 2 - POO/inheritance.js" type="module"></script> 
+        <script src="/JS/Week 2 - POO/inheritances2.js" type="module"></script>
+        <script src="/JS/Week 2 - POO/encapsulation.js" type="module"></script>
+        <script src="/JS/Week 2 - POO/polymorphism.js" type="module"></script>
+        <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>   -->
+
+
+<!-- Código y Teoría, Semana 3 -->
+              <script src="/JS/Week 3.5 -DS - Stack-Queues/stacks.js"></script>
+        <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>
+            <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script> -->
+
+
+
+<!-- Código y Teoría, Semana 4 -->
+    <!--<script src="/JS/Week 4 - Pilas - Colas/binarySearch.js" type="module"></script> 
+        <script src="/JS/Week 4 - Pilas - Colas/quickSort.js" type="module"></script>
+        <script src="/JS/Week 4 - Data Structure/margeSort.js" type="module"></script> 
+        <script src="/JS/Week 4 - Data Structure/selectionSort.js" type="module"></script>
+        <script src="/JS/Week 4 - Data Structure/insertionSort.js" type="module"></script> -->
 
 
 
