--- a/index.html
+++ b/index.html
@@ -81,11 +81,40 @@
         <script src="/JS/Week 2 - POO/inheritance.js" type="module"></script> 
         <script src="/JS/Week 2 - POO/inheritances2.js" type="module"></script>
         <script src="/JS/Week 2 - POO/encapsulation.js" type="module"></script>
-        <script src="/JS/Week 2 - POO/polymorphism.js" type="module"></script>
-        <script src="/JS/Week 3 - Arrays/array.js" type="module"></script>   -->
+        <script src="/JS/Week 2 - POO/polymorphism.js" type="module"></script>-->
 
 
 <!-- Código y Teoría, Semana 3 -->
+        <!-- <script src="/JS/Week 3 - DS - Array/array.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/1-length.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/2-slice.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/3-pop.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/4-arrayOf.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/5-filter.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/6-fill.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/7-forEach.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/8-find.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/9-map.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/10-sort-toSorted.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/11-some.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/12-includes.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/13-every.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/14-concat.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/15-join.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/16-reduce.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/17-indexOf.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/18-findIndex.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/19-shift-Unshift.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/20-reverse-toReversed.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/21-splice-toSpliced.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/22-flat.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/23-isArray.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/24-from.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/25-rest.js" type="module"></script>   
+        <script src="/JS/Week 3 - DS - Array/26-spread.js" type="module"></script>    -->
+
+
+<!-- Código y Teoría, Semana 3.5 -->
               <script src="/JS/Week 3.5 -DS - Stack-Queues/stacks.js"></script>
         <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>
             <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script> -->
