--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
              <script src="./JS/Excercises/W3-arraysMethods/4-isArray-VS-instanceOf.js" type="module"></script> -->
 
  <!-- Ejercicios de práctica - Semana 3.5  -->
-         <!-- <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/1-stacks"></script> -->
+         <!-- <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/1-stacks"></script> 
+         <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/2-queue.js"></script>-->
+         <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/3-linkedList.js"></script>
 
  <!-- Ejercicios de práctica - Semana 4  -->
         <!-- <script src="./JS/Excercises/W4-dataStructure/1-margeSort.js" type="module"></script>
@@ -115,9 +117,10 @@
 
 
 <!-- Código y Teoría, Semana 3.5 -->
-              <script src="/JS/Week 3.5 -DS - Stack-Queues/stacks.js"></script>
-        <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>
-            <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script> -->
+              <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/stacks.js"></script> 
+              <script src="/JS/Week 3.5 -DS - Stack-Queues/queues.js"></script> -->
+       <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script> -->
+            <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script> -->
 
 
 
