--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
 <!-- Código y Teoría, Semana 3.5 -->
               <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/stacks.js"></script> 
-              <script src="/JS/Week 3.5 -DS - Stack-Queues/queues.js"></script> -->
-       <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>
-            <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script> -->
+              <script src="/JS/Week 3.5 -DS - Stack-Queues/queues.js"></script> 
+            <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>-->
+            <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script>
 
 
 
