--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
  <!-- Ejercicios de práctica - Semana 3.5  -->
          <!-- <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/1-stacks"></script> 
          <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/2-queue.js"></script>
-         <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/3-linkedList.js"></script>-->
+         <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/3-linkedList.js"></script>
+         <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/4-binaryTree.js"></script>
+         <script src="/JS/Excercises/W3.5-dataStructure-StacksETC/5-graphs.js"></script> -->
 
  <!-- Ejercicios de práctica - Semana 4  -->
         <!-- <script src="./JS/Excercises/W4-dataStructure/1-margeSort.js" type="module"></script>
@@ -119,8 +121,9 @@
 <!-- Código y Teoría, Semana 3.5 -->
               <!-- <script src="/JS/Week 3.5 -DS - Stack-Queues/stacks.js"></script> 
               <script src="/JS/Week 3.5 -DS - Stack-Queues/queues.js"></script> 
-            <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>-->
-            <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script>
+            <script src="/JS/Week 3.5 -DS - Stack-Queues/linkedList.js"></script>
+            <script src="/JS/Week 3.5 -DS - Stack-Queues/binaryTree.js"></script>-->
+            <script src="/JS/Week 3.5 -DS - Stack-Queues/graphs.js"></script>
 
 
 
